--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
          background: green;
          padding: 10px;
          height: 100px;
+         right: 0;
      }
 
      .firstPositionedSpan {
